k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: regatta-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: regatta-api
  template:
    metadata:
      labels:
        app: regatta-api
    spec:
      serviceAccountName: regatta-api-sa
      containers:
        - name: api
          image: gcr.io/clgcporg10-162/regatta-api:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: regatta-api
spec:
  selector:
    app: regatta-api
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
