k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: regatta-frontend
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: regatta-frontend
  template:
    metadata:
      labels:
        app: regatta-frontend
    spec:
      containers:
        - name: frontend
          image: gcr.io/clgcporg10-162/regatta-frontend:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: regatta-frontend
spec:
  type: ClusterIP
  selector:
    app: regatta-frontend
  ports:
    - port: 80
      targetPort: 80
