k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: regatta-api-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "regatta-ip"
spec:
  rules:
  - host: regattas.blondfury.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: regatta-api
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: regatta-frontend
            port:
              number: 80
